# rive_native

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  hash.txt  pubspec.yaml  runtime_exclude.txt  version.txt
android/src/main/kotlin/app/rive/rive_native/: RiveNativePlugin.kt
example/lib/: main.dart  rive_player.dart
example/lib/semantic/flutter/: debugger.dart  dropdown_list.dart  lists.dart  simpsons.dart
example/lib/semantic/rive/: databinding_lists.dart  playground.dart  simpsons.dart
ios/: rive_native.podspec
ios/rive_native/: Package.swift
lib/: focus.dart  layout_engine.dart  rive_audio.dart  rive_luau.dart  rive_native.dart  rive_text.dart  scripting_workspace.dart  semantics.dart
lib/src/: glyph_lookup.dart  rive.dart  rive_native_ffi.dart  rive_native_web.dart  rive_renderer.dart  rive_semantics.dart  rive_widget.dart
lib/src/ffi/: flutter_renderer_ffi.dart  layout_engine_ffi.dart  rive_audio_ffi.dart  rive_ffi.dart  rive_focus_ffi.dart  rive_luau_ffi.dart  rive_renderer_ffi.dart  rive_semantic_ffi.dart  rive_text_ffi.dart  scripting_workspace_ffi.dart
lib/src/focus/: edge_behavior.dart
lib/src/semantics/: rive_semantics_overlay.dart  rive_semantics_test_helpers.dart  semantic_debug_overlay.dart  semantic_debugger.dart  semantic_role.dart  semantic_state.dart  semantic_trait.dart  semantic_tree_model.dart  semantics_diff.dart
lib/src/utilities/binary_buffer/: binary_reader.dart  binary_writer.dart
lib/src/web/: layout_engine_web.dart  rive_audio_web.dart  rive_focus_web.dart  rive_luau_web.dart  rive_renderer_web.dart  rive_semantic_web.dart  rive_text_web.dart  rive_web.dart  scripting_workspace_web.dart
linux/: CMakeLists.txt  rive_native_plugin.cpp
macos/: rive_native.podspec
macos/rive_native/: Package.swift
macos/rive_native/Sources/rive_native/: RiveNativePlugin.swift  rive_native_plugin.mm
native/: build.sh  build_xcframework.sh  premake5.lua  update_spm_package.sh
native/platform/android/: rive_native_android.cpp
native/platform/linux/: rive_native_linux.cpp
native/platform/wasm/: init.js  scripting_work_callbacks.js  webgl_factory.cpp
native/src/: dart_focus_node.hpp  dart_focusable_helper.hpp  flutter_renderer.cpp  headless_rendering.mm  layout_engine_binding.cpp  pls_binding.mm  renderer_binding.cpp  renderer_context.hpp  rive_audio_binding.cpp  rive_binding.cpp  rive_luau_binding.cpp  text_binding.cpp
native/wasm/: package.json
test/: api_integrity_test.dart  color_glyph_test.dart  data_binding_test.dart  events_test.dart  focus_test.dart  nested_input_test.dart  profiler_test.dart  state_change_test.dart  text_runs_test.dart
test/semantic/: semantic_collapse_order_test.dart  semantic_databinding_list_items_test.dart  semantic_databinding_list_test.dart  semantic_focus_list_order_test.dart  semantic_list_focus_test.dart  semantic_simpsons_test.dart  semantic_tab_test.dart  semantic_tree_model_test.dart
windows/: CMakeLists.txt
